jsp:text doesn't have any subelements.

--- a/base-webapp/src/main/webapp/mmbase/components/core/request.jspx
+++ b/base-webapp/src/main/webapp/mmbase/components/core/request.jspx
@@ -20,7 +20,7 @@
             <td>
               <c:choose>
                 <c:when test="${fn:length(entry.value) eq 1}">
-                  <jsp:text><mm:escape>${entry.value[0]}</mm:escape></jsp:text>
+                  <mm:escape>${entry.value[0]}</mm:escape>
                 </c:when>
                 <c:otherwise>
                   <ul>
